--- a/CargoTrackingSystem/packages.config
+++ b/CargoTrackingSystem/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="FireSharp" version="2.0.4" targetFramework="net472" />
   <package id="GMap.NET.Core" version="2.0.2" targetFramework="net472" />
   <package id="GMap.NET.Windows" version="2.0.2" targetFramework="net472" />
   <package id="GMap.NET.WinForms" version="2.0.2" targetFramework="net472" />
@@ -19,7 +20,11 @@
   <package id="Grpc.Auth" version="2.36.4" targetFramework="net472" />
   <package id="Grpc.Core" version="2.36.4" targetFramework="net472" />
   <package id="Grpc.Core.Api" version="2.36.4" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
